--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.13.1",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
