--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^4.13.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
+    "ng2-daum-address": "^1.1.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
