--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-in-memory-web-api": "^0.6.0",
     "angularfire2": "^5.0.0-rc.7",
     "core-js": "^2.4.1",
     "firebase": "^4.13.1",
