--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/animejs": "^2.0.0",
     "angularfire2": "^5.0.0-rc.7",
+    "animejs": "^2.2.0",
     "core-js": "^2.4.1",
     "firebase": "^4.13.1",
     "hammerjs": "^2.0.8",
