--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^5.2.0",
     "@angular/cdk": "^5.2.5",
     "@angular/common": "^5.2.0",
@@ -24,8 +25,8 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "angular-in-memory-web-api": "^0.6.0",
     "@types/animejs": "^2.0.0",
+    "angular-in-memory-web-api": "^0.6.0",
     "angularfire2": "^5.0.0-rc.7",
     "animejs": "^2.2.0",
     "core-js": "^2.4.1",
