--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+
   "name": "final",
   "version": "0.0.0",
   "license": "MIT",
@@ -26,11 +27,14 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/animejs": "^2.0.0",
+    "@types/google-maps": "^3.2.0",
     "angular-in-memory-web-api": "^0.6.0",
     "angularfire2": "^5.0.0-rc.7",
     "animejs": "^2.2.0",
     "core-js": "^2.4.1",
     "firebase": "^4.13.1",
+    "geocoder": "^0.2.3",
+    "google-maps": "^3.3.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "ng2-daum-address": "^1.1.4",
@@ -60,3 +64,4 @@
     "typescript": "~2.5.3"
   }
 }
+
